# flow-claude

./: .gitignore  ASYNC_FIX.md  AUTOCOMPLETE_DEMO.md  CLAUDE.md  COMPLEX_TEST_RESULTS_FINAL.md  DESIGN_MCP_OPTIMIZATION.md  DESIGN_PIPELINE.md  FIXED_FOOTER.md  FLOW_BRANCH_UPDATE.md  FOOTER_FIX_SUMMARY.md  INPUT_BORDERS_COMPLETE.md  INTERACTIVE_CLI_FINAL_DESIGN.md  MCP_FIXES_SUMMARY.md  MCP_TOOLS_TEST_RESULTS.md  PLANNER_INSTRUCTIONS.md  PLANNER_MCP_UPDATE.md  QUICKSTART.md  README.md  REDESIGN_SUMMARY.md  SCRIPTS_ARCHITECTURE.md  SIMPLE_CLI_DESIGN.md  UI_COMPLETE_SUMMARY.md  UI_ENHANCEMENTS.md  UI_IMPROVEMENTS.md  USER_GUIDE.md  imlementation plan.out  index.html  pyproject.toml  ss  test_architecture.py  test_fixed_footer.py  test_follow_up.py  test_footer_after_input.py  test_formatter.py  test_rich_ui.py  text
.claude/: settings.local.json
.github/workflows/: ci-release.yml
assets/BEST_PRACTICE/: system-architecture.mmd
css/: base.css  navigation.css
docs/: USER_GUIDE.md  WORKFLOW_DETAILS.md
flow_claude/: .gitignore  ORCHESTRATOR_INSTRUCTIONS.md  agents.py  cli.py  cli_controller.py  cli_rich_ui.py  git_tools.py  ipc.py  key_detector.py  launch_workera.py  logging_config.py  orchestrator.py  parsers.py  sdk_workers copy.py  sdk_workers.py  stop_hook_handler.py  textual_cli.py  textual_ui.py
flow_claude.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
flow_claude/.claude/: settings.local.json
flow_claude/commands/: flow_cli.py  set_parallel.py
flow_claude/prompts/: orchestrator.md  orchestrator_old.md  planner.md  planner.md.backup  worker.md
flow_claude/prompts_light/: orchestrator.md  user.md
flow_claude/scripts/: create_plan_branch.py  create_task_branch.py  get_provides.py  get_worker_status.py  launch_worker.py  parse_latest_branch_commit.py  parse_plan.py  parse_task.py  parse_worker_commit.py  parsers.py  (+2 more)
prompts/: orchestrator.md  planner-v6.5-backup.md  planner.md  user.md  worker.md
(+53 files in other folders)
