[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flow-claude"
version = "0.1.0"
description = "Claude Code UI-native autonomous development system with git-first architecture"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Flow-Claude Contributors"}
]
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "click>=8.1.0",
    "textual>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
flow = "flow_claude.commands.flow_cli:main"
flow-claude = "flow_claude.commands.flow_cli:main"
flow-auto = "flow_claude.commands.toggle_auto:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["flow_claude*"]

[tool.setuptools.package-data]
flow_claude = ["templates/**/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
